# mteaching

./: README.md  pack.txt
C++/example/: config.h  function.cpp  function.h  gettime.c  main.cpp  mongoose.cpp  mongoose.h  mteaching.cpp  mteaching.h  mteaching.txt  storage.cpp  storage.h  structure.cpp  structure.h
C/CRC/: CRC.c
C/ffmpeg/: CMakeLists.txt  main.c
C/item/: main.c
C/simple/: string_array.c
C/string_to_hex/: main.c
C/terminal/: OLED128_64.c  main.c
CMake/: curl_CMakeLists.txt
ESP-IDF/: BLE_UART_IN_ONE.c
ESP-IDF/i2c_tools/: CMakeLists.txt  LED.h  bluetooth.c  bluetooth.h  http.c  http.h  i2ctools_example_main.c  ili9341.c  ili9341.h  mqtt.c  mqtt.h  sdkconfig  sdkconfig.old  uart.c  uart.h
Linux/D-BUS/: README.md  bus.sh  client.c
Linux/D-BUS/dbus/: CMakeLists.txt  Interface.xml  backup.txt  gdbus.c  gdbus.h  main.c
Linux/DomainameToIP/: CMakeLists.txt  main.c
Linux/Glib/: Makefile  README.md  channel.c  loop.c  mutex.c  mutexNoSuspended.c  queue.c  slist.c  thread.c
Linux/Glib/gobject/: CMakeLists.txt  README.md  backup.txt  main.c  student.c  student.h
Linux/X-Window/: command.txt  connect.c  content.c  fb0.c  read.c  window.c  window.sh  write.c
Linux/fork/: main.c
Linux/framebuffer/: detail.c  write_fb.c
Python/: mongoose.py
U-Boot/: cmd.txt
note/: Assembly.md  Cmd.md  ESP-IDF.md  Makefile.md  SDK.md  SSL.md  VS Code.md  board.md  can.md  core.md  display.md  dts.md  encode.md  exper.md  ffmpeg.md  gst-launch-stm32mp157.md  http.md  pointer.md  regex.txt  shell.md  socket.md  ssh.md  stack.md  u-boot.md  wayland.md
rt-thread/: spi.c
stm32mp157f-dk2/bq35100/: CMakeLists.txt  README.txt  bq35100.h  main.c
(+257 files in other folders)
